# satellite-building-instance-segmentation

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
src/models/: custom_architecture.py  transfer_learning.py
src/stages/: data_prep.py  inference.py  train.py
src/utils/: dataset.py  satelite_images.py
