[project]
name = "satellite-building-instance-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "datasets>=4.5.0",
    "dvc>=3.66.1",
    "opencv-python>=4.13.0.90",
    "pyyaml>=6.0.3",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.24.0",
]
